fix. class content reflection (include homework)
- 실습 환경 수정
- 수업 시간 실습 내용 반영
- 숙제 1번 (get_dags.py 기반) 풀이
- 숙제 2번 (docker-compose.yaml) 풀이

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -58,8 +58,10 @@ x-airflow-common:
     AIRFLOW__CELERY__BROKER_URL: redis://:@redis:6379/0
     AIRFLOW__CORE__FERNET_KEY: ''
     AIRFLOW__CORE__DAGS_ARE_PAUSED_AT_CREATION: 'true'
-    AIRFLOW__CORE__LOAD_EXAMPLES: 'true'
+    AIRFLOW__CORE__LOAD_EXAMPLES: 'false'
     AIRFLOW__API__AUTH_BACKENDS: 'airflow.api.auth.backend.basic_auth,airflow.api.auth.backend.session'
+    # default: 'False' / allow-value: 'non-sensitive-only', 'True', 'False'
+    AIRFLOW__WEBSERVER__EXPOSE_CONFIG: 'True'
     AIRFLOW_VAR_DATA_DIR: /opt/airflow/data
     _PIP_ADDITIONAL_REQUIREMENTS: ${_PIP_ADDITIONAL_REQUIREMENTS:- pymysql yfinance pandas numpy oauth2client gspread}
   volumes:
